--- a/posts.html
+++ b/posts.html
@@ -1,1 +1,177 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Pulsenet - Post</title>
+<style>
+body { font-family:sans-serif; background:#FDFDFF; color:#111; margin:0; padding:20px; }
+header { display:flex; justify-content:space-between; align-items:center; margin-bottom:20px; flex-wrap:wrap; }
+button { cursor:pointer; margin:5px; padding:8px 12px; border-radius:8px; border:none; font-family:inherit; display:none; }
+#post { border:1px solid #ddd; padding:20px; border-radius:15px; margin-bottom:20px; }
+.reaction-btn { margin-right:10px; cursor:pointer; }
+.comments { margin-top:20px; }
+.comment { border-top:1px solid #eee; padding:8px 0; }
+.comment b { margin-right:5px; }
+#new-comment { display:flex; gap:5px; margin-top:10px; }
+#new-comment input { flex:1; padding:8px; border:1px solid #ccc; border-radius:5px; }
+</style>
+</head>
+<body>
 
+<header>
+  <h1>Perspective</h1>
+  <div id="top-buttons">
+    <button id="login-btn">Login / Register</button>
+    <button id="account-btn">Account</button>
+    <button id="logout-btn">Logout</button>
+    <button id="back-feed-btn">Back to Feed</button>
+  </div>
+</header>
+
+<div id="post">
+  <h2 id="title"></h2>
+  <p id="author-date" class="meta"></p>
+  <p id="content"></p>
+  <div id="reactions">
+    <button class="reaction-btn" data-reaction="like">❤️ 0</button>
+    <button class="reaction-btn" data-reaction="fire">🔥 0</button>
+    <button class="reaction-btn" data-reaction="insight">💡 0</button>
+  </div>
+  <div class="meta" id="views">Views: 0</div>
+  <div class="comments" id="comments">
+    <h3>Comments</h3>
+    <div id="comments-list"></div>
+    <div id="new-comment" class="hidden">
+      <input type="text" id="comment-input" placeholder="Add a comment..."/>
+      <button id="send-comment">Send</button>
+    </div>
+  </div>
+</div>
+
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+import { getFirestore, doc, getDoc, updateDoc, increment, arrayUnion } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+
+// Firebase config
+const firebaseConfig = {
+  apiKey: "AIzaSyBeslEXxh_2j9dLiwAgeRL3p11iqgWfMgo",
+  authDomain: "pulsenet-d1fe0.firebaseapp.com",
+  projectId: "pulsenet-d1fe0",
+  storageBucket: "pulsenet-d1fe0.firebasestorage.app",
+  messagingSenderId: "816402062445",
+  appId: "1:816402062445:web:cf7ce7eb9c57c1ef2fb364"
+};
+
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
+const appId = "pulsenet-d1fe0";
+
+// DOM
+const loginBtn = document.getElementById("login-btn");
+const accountBtn = document.getElementById("account-btn");
+const logoutBtn = document.getElementById("logout-btn");
+const backFeedBtn = document.getElementById("back-feed-btn");
+
+const titleEl = document.getElementById("title");
+const authorDateEl = document.getElementById("author-date");
+const contentEl = document.getElementById("content");
+const reactionsEl = document.getElementById("reactions");
+const viewsEl = document.getElementById("views");
+const commentsListEl = document.getElementById("comments-list");
+const newCommentDiv = document.getElementById("new-comment");
+const commentInput = document.getElementById("comment-input");
+const sendCommentBtn = document.getElementById("send-comment");
+
+// URL param
+const params = new URLSearchParams(window.location.search);
+const postId = params.get("id");
+
+// Auth state
+let currentUser = null;
+onAuthStateChanged(auth,user=>{
+  currentUser = user;
+  logoutBtn.style.display = user ? "inline-block" : "none";
+  accountBtn.style.display = user ? "inline-block" : "none";
+  loginBtn.style.display = user ? "none" : "inline-block";
+  newCommentDiv.classList.toggle("hidden", !user);
+});
+
+// Navigation
+loginBtn.onclick = ()=>window.location.href="login.html";
+accountBtn.onclick = ()=>window.location.href="account.html";
+logoutBtn.onclick = ()=>signOut(auth);
+backFeedBtn.onclick = ()=>window.location.href="index.html";
+
+// Load post
+async function loadPost(){
+  if(!postId) return alert("No post specified");
+
+  const postRef = doc(db,"artifacts",appId,"public","data","posts",postId);
+  const postSnap = await getDoc(postRef);
+
+  if(!postSnap.exists()) return alert("Post not found!");
+
+  const post = postSnap.data();
+
+  // Increment views
+  await updateDoc(postRef,{ views: increment(1) });
+
+  titleEl.textContent = post.title;
+  contentEl.textContent = post.content;
+  const dateStr = post.createdAt?.seconds ? new Date(post.createdAt.seconds*1000).toLocaleDateString() : "";
+  authorDateEl.textContent = `By ${post.authorName || "Anonymous"} • ${dateStr}`;
+  viewsEl.textContent = `Views: ${post.views || 0}`;
+
+  // Reactions
+  reactionsEl.querySelectorAll(".reaction-btn").forEach(btn=>{
+    const type = btn.dataset.reaction;
+    btn.textContent = `${btn.textContent.split(" ")[0]} ${post.reactions?.[type]||0}`;
+    btn.onclick = async ()=>{
+      if(!currentUser) return alert("Login to react!");
+      await updateDoc(postRef,{ [`reactions.${type}`]: increment(1) });
+      loadPost();
+    };
+  });
+
+  // Comments
+  commentsListEl.innerHTML = "";
+  (post.comments || []).sort((a,b)=> new Date(a.createdAt)-new Date(b.createdAt))
+    .forEach(c=>{
+      const div = document.createElement("div");
+      div.className="comment";
+      div.innerHTML=`<b>${escapeHTML(c.authorName)}:</b> ${escapeHTML(c.text)}`;
+      commentsListEl.appendChild(div);
+    });
+}
+
+// Send new comment
+sendCommentBtn.onclick = async ()=>{
+  const text = commentInput.value.trim();
+  if(!text) return;
+  const postRef = doc(db,"artifacts",appId,"public","data","posts",postId);
+  await updateDoc(postRef,{
+    comments: arrayUnion({
+      text,
+      authorName: currentUser.displayName || "Anonymous",
+      authorId: currentUser.uid,
+      createdAt: new Date().toISOString()
+    })
+  });
+  commentInput.value="";
+  loadPost();
+};
+
+function escapeHTML(str){
+  return str?.replace(/[&<>"']/g,m=>({
+    "&":"&amp;","<":"&lt;",">":"&gt;",
+    '"':"&quot;","'":"&#039;"
+  }[m]));
+}
+
+loadPost();
+</script>
+</body>
+</html>
