--- a/posts.html
+++ b/posts.html
@@ -13,7 +13,8 @@ button { cursor:pointer; margin:5px; padding:8px 12px; border-radius:8px; border
 .comments { margin-top:20px; }
 .comment { border-top:1px solid #eee; padding:8px 0; display:flex; justify-content:space-between; align-items:center; }
 .comment b { margin-right:5px; cursor:pointer; color:blue; text-decoration:underline; }
-.comment-buttons { display:flex; gap:5px; }
+#new-comment { display:flex; gap:5px; margin-top:10px; }
+#new-comment input { flex:1; padding:8px; border:1px solid #ccc; border-radius:5px; }
 </style>
 </head>
 <body>
@@ -41,14 +42,17 @@ button { cursor:pointer; margin:5px; padding:8px 12px; border-radius:8px; border
   <div class="comments" id="comments">
     <h3>Comments</h3>
     <div id="comments-list"></div>
-    <button id="add-comment-btn">Add Comment</button>
+    <div id="new-comment" class="hidden">
+      <input type="text" id="comment-input" placeholder="Add a comment..."/>
+      <button id="send-comment">Send</button>
+    </div>
   </div>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
 import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-import { getFirestore, doc, getDoc, updateDoc, increment } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+import { getFirestore, doc, getDoc, updateDoc, increment, arrayUnion } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
 // Firebase config
 const firebaseConfig = {
@@ -77,7 +81,9 @@ const contentEl = document.getElementById("content");
 const reactionsEl = document.getElementById("reactions");
 const viewsEl = document.getElementById("views");
 const commentsListEl = document.getElementById("comments-list");
-const addCommentBtn = document.getElementById("add-comment-btn");
+const newCommentDiv = document.getElementById("new-comment");
+const commentInput = document.getElementById("comment-input");
+const sendCommentBtn = document.getElementById("send-comment");
 
 // URL param
 const params = new URLSearchParams(window.location.search);
@@ -90,6 +96,7 @@ onAuthStateChanged(auth,user=>{
   logoutBtn.style.display = user ? "inline-block" : "none";
   accountBtn.style.display = user ? "inline-block" : "none";
   loginBtn.style.display = user ? "none" : "inline-block";
+  newCommentDiv.classList.toggle("hidden", !user);
 });
 
 // Navigation
@@ -114,13 +121,13 @@ async function loadPost(){
 
   titleEl.textContent = post.title;
   contentEl.textContent = post.content;
-
   const dateStr = post.createdAt?.seconds ? new Date(post.createdAt.seconds*1000).toLocaleDateString() : "";
-  
+
   // Author clickable
-  authorDateEl.innerHTML = `By <b class="author-name">${escapeHTML(post.authorName || "Anonymous")}</b> • ${dateStr}`;
-  document.querySelector(".author-name").onclick = ()=> {
-    window.location.href = "account.html?uid="+post.authorId;
+  authorDateEl.innerHTML = `By <b class="author-name" data-uid="${post.authorId}">${escapeHTML(post.authorName || "Anonymous")}</b> • ${dateStr}`;
+  document.querySelector(".author-name").onclick = e=>{
+    const uid = e.target.dataset.uid;
+    window.location.href = `account.html?uid=${uid}`;
   };
 
   viewsEl.textContent = `Views: ${post.views || 0}`;
@@ -142,22 +149,16 @@ async function loadPost(){
     .forEach(c=>{
       const div = document.createElement("div");
       div.className="comment";
-
-      const usernameLink = `<b class="comment-user" data-uid="${c.authorId}">${escapeHTML(c.authorName)}</b>`;
-      div.innerHTML = `
-        <span>${usernameLink}: ${escapeHTML(c.text)}</span>
-        <div class="comment-buttons">
-          <button class="reply-btn">Reply</button>
-        </div>
-      `;
-
-      // Username click
+      div.innerHTML=`<b class="comment-user" data-uid="${c.authorId}">${escapeHTML(c.authorName)}</b>: ${escapeHTML(c.text)} 
+      <button class="reply-btn">Reply</button>`;
+      
+      // Username click → account
       div.querySelector(".comment-user").onclick = e=>{
         const uid = e.target.dataset.uid;
-        window.location.href = "account.html?uid="+uid;
+        window.location.href = `account.html?uid=${uid}`;
       };
 
-      // Reply button click
+      // Reply click → comments.html
       div.querySelector(".reply-btn").onclick = ()=>{
         window.location.href = `comments.html?postId=${postId}&replyTo=${c.authorId}`;
       };
@@ -166,9 +167,21 @@ async function loadPost(){
     });
 }
 
-// Add Comment button leads to comments.html
-addCommentBtn.onclick = ()=>{
-  window.location.href = `comments.html?postId=${postId}`;
+// Send new comment
+sendCommentBtn.onclick = async ()=>{
+  const text = commentInput.value.trim();
+  if(!text) return;
+  const postRef = doc(db,"artifacts",appId,"public","data","posts",postId);
+  await updateDoc(postRef,{
+    comments: arrayUnion({
+      text,
+      authorName: currentUser.displayName || "Anonymous",
+      authorId: currentUser.uid,
+      createdAt: new Date().toISOString()
+    })
+  });
+  commentInput.value="";
+  loadPost();
 };
 
 function escapeHTML(str){
