--- a/posts.html
+++ b/posts.html
@@ -13,8 +13,7 @@ button { cursor:pointer; margin:5px; padding:8px 12px; border-radius:8px; border
 .comments { margin-top:20px; }
 .comment { border-top:1px solid #eee; padding:8px 0; display:flex; justify-content:space-between; align-items:center; }
 .comment b { margin-right:5px; cursor:pointer; color:blue; text-decoration:underline; }
-#new-comment { display:flex; gap:5px; margin-top:10px; }
-#new-comment input { flex:1; padding:8px; border:1px solid #ccc; border-radius:5px; }
+#add-comment-btn { margin-top:10px; padding:8px 12px; border-radius:5px; border:1px solid #ccc; background:#111; color:#fff; cursor:pointer; display:none; }
 </style>
 </head>
 <body>
@@ -40,10 +39,7 @@ button { cursor:pointer; margin:5px; padding:8px 12px; border-radius:8px; border
   <div class="comments" id="comments">
     <h3>Comments</h3>
     <div id="comments-list"></div>
-    <div id="new-comment" class="hidden">
-      <input type="text" id="comment-input" placeholder="Add a comment..."/>
-      <button id="send-comment">Send</button>
-    </div>
+    <button id="add-comment-btn">Add Comment</button>
   </div>
 </div>
 
@@ -77,9 +73,7 @@ const authorDateEl = document.getElementById("author-date");
 const contentEl = document.getElementById("content");
 const reactionsEl = document.getElementById("reactions");
 const commentsListEl = document.getElementById("comments-list");
-const newCommentDiv = document.getElementById("new-comment");
-const commentInput = document.getElementById("comment-input");
-const sendCommentBtn = document.getElementById("send-comment");
+const addCommentBtn = document.getElementById("add-comment-btn");
 
 // Toggle top buttons
 document.querySelector("header h1").addEventListener("click", () => {
@@ -102,7 +96,7 @@ let currentUser = null;
 onAuthStateChanged(auth,user=>{
   currentUser = user;
   reactionsEl.querySelectorAll(".reaction-btn").forEach(btn => btn.disabled = !user);
-  newCommentDiv.classList.toggle("hidden", !user);
+  addCommentBtn.style.display = user ? "inline-block" : "none";
 });
 
 // Load post
@@ -158,22 +152,9 @@ async function loadPost(){
     });
 }
 
-// Send new comment
-sendCommentBtn.onclick = async ()=>{
-  if(!currentUser) return alert("Login to comment!");
-  const text = commentInput.value.trim();
-  if(!text) return;
-  const postRef = doc(db,"artifacts",appId,"public","data","posts",postId);
-  await updateDoc(postRef,{
-    comments: arrayUnion({
-      text,
-      authorName: currentUser.displayName || "Anonymous",
-      authorId: currentUser.uid,
-      createdAt: new Date().toISOString()
-    })
-  });
-  commentInput.value="";
-  loadPost();
+// Go to comments.html to add comment
+addCommentBtn.onclick = ()=>{
+  window.location.href = `comments.html?postId=${postId}`;
 };
 
 function escapeHTML(str){
