--- a/posts.html
+++ b/posts.html
@@ -13,7 +13,7 @@ button { cursor:pointer; margin:5px; padding:8px 12px; border-radius:8px; border
 .comments { margin-top:20px; }
 .comment { border-top:1px solid #eee; padding:8px 0; display:flex; justify-content:space-between; align-items:center; }
 .comment b { margin-right:5px; cursor:pointer; color:blue; text-decoration:underline; }
-#add-comment-btn { margin-top:10px; padding:8px 12px; border-radius:5px; border:1px solid #ccc; background:#111; color:#fff; cursor:pointer; display:none; }
+#add-comment-btn, #back-btn { margin-top:10px; padding:8px 12px; border-radius:5px; border:1px solid #ccc; background:#111; color:#fff; cursor:pointer; display:none; }
 </style>
 </head>
 <body>
@@ -41,6 +41,7 @@ button { cursor:pointer; margin:5px; padding:8px 12px; border-radius:8px; border
     <div id="comments-list"></div>
     <button id="add-comment-btn">Add Comment</button>
   </div>
+  <button id="back-btn">Back</button>
 </div>
 
 <script type="module">
@@ -48,7 +49,6 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebas
 import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
 import { getFirestore, doc, getDoc, updateDoc, increment, arrayUnion } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
-// Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyBeslEXxh_2j9dLiwAgeRL3p11iqgWfMgo",
   authDomain: "pulsenet-d1fe0.firebaseapp.com",
@@ -74,6 +74,7 @@ const contentEl = document.getElementById("content");
 const reactionsEl = document.getElementById("reactions");
 const commentsListEl = document.getElementById("comments-list");
 const addCommentBtn = document.getElementById("add-comment-btn");
+const backBtn = document.getElementById("back-btn");
 
 // Toggle top buttons
 document.querySelector("header h1").addEventListener("click", () => {
@@ -83,9 +84,10 @@ document.querySelector("header h1").addEventListener("click", () => {
 });
 
 // Navigation
-loginBtn.addEventListener("click", ()=>window.location.href="login.html");
-accountBtn.addEventListener("click", ()=>window.location.href="account.html");
-logoutBtn.addEventListener("click", ()=>signOut(auth));
+loginBtn.onclick = ()=>window.location.href="login.html";
+accountBtn.onclick = ()=>window.location.href="account.html";
+logoutBtn.onclick = ()=>signOut(auth);
+backBtn.onclick = ()=>window.history.back();
 
 // Get postId
 const params = new URLSearchParams(window.location.search);
@@ -135,7 +137,9 @@ async function loadPost(){
       const div = document.createElement("div");
       div.className="comment";
       div.innerHTML = `<b class="comment-user" data-uid="${c.authorId}">${escapeHTML(c.authorName)}</b>: ${escapeHTML(c.text)}
-      <button class="reply-btn">Reply</button>`;
+      <button class="reply-btn">Reply</button>
+      <button class="like-comment-btn">❤️ ${c.likes||0}</button>
+      <button class="burn-comment-btn">🔥 ${c.burns||0}</button>`;
 
       // Username click → account
       div.querySelector(".comment-user").onclick = e=>{
@@ -146,6 +150,26 @@ async function loadPost(){
       // Reply click → comments.html
       div.querySelector(".reply-btn").onclick = ()=>{
         window.location.href = `comments.html?postId=${postId}&replyTo=${c.authorId}`;
+      };
+
+      // Like comment
+      div.querySelector(".like-comment-btn").onclick = async ()=>{
+        if(!currentUser) return alert("Login to react!");
+        const index = post.comments.findIndex(x=>x.authorId===c.authorId && x.text===c.text);
+        if(index<0) return;
+        post.comments[index].likes = (post.comments[index].likes||0)+1;
+        await updateDoc(doc(db,"artifacts",appId,"public","data","posts",postId),{comments: post.comments});
+        loadPost();
+      };
+
+      // Burn comment
+      div.querySelector(".burn-comment-btn").onclick = async ()=>{
+        if(!currentUser) return alert("Login to react!");
+        const index = post.comments.findIndex(x=>x.authorId===c.authorId && x.text===c.text);
+        if(index<0) return;
+        post.comments[index].burns = (post.comments[index].burns||0)+1;
+        await updateDoc(doc(db,"artifacts",appId,"public","data","posts",postId),{comments: post.comments});
+        loadPost();
       };
 
       commentsListEl.appendChild(div);
